--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <div class="hidden md:flex items-center space-x-6 order-3">
                 <a href="https://gamebin.online" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Home</a>
                 <a href="https://games.gamebin.online" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Games</a>
-                <a href="#" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Suggest a Game</a>
-                <a href="index.html#contact" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Contact Us</a>
+                <a href="https://forms.gle/WZkRdndd9gwhoodGA" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Suggest a Game</a>
+                <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="text-white hover:text-red-400 font-medium transition duration-300 rounded-md p-2 hover:bg-gray-700">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -127,8 +127,8 @@
         <div class="mt-16 space-y-4">
             <a href="https://gamebin.online" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Home</a>
             <a href="https://games.gamebin.online" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Games</a>
-            <a href="#" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Suggest a game</a>
-            <a href="index.html#contact" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Contact Us</a>
+            <a href="https://forms.gle/WZkRdndd9gwhoodGA" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Suggest a game</a>
+            <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="block text-white hover:text-red-400 p-2 rounded-md hover:bg-gray-800 transition duration-300 text-left">Contact Us</a>
         </div>
     </div>
 
@@ -185,7 +185,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 p-6 text-center text-gray-400 mt-auto shadow-inner">
         <div class="flex flex-wrap justify-center space-x-4 sm:space-x-6 mt-4">
-            <a href="index.html#contact" class="hover:text-white transition duration-300 text-sm sm:text-base">Contact Us</a>
+            <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="hover:text-white transition duration-300 text-sm sm:text-base">Contact Us</a>
             <a href="https://about.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">Contact Us</a>
             <a href="https://privacy-policy.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">Privacy Policy</a>
             <!-- Corrected link for Terms & Conditions to point to itself -->
