--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <p class="text-sm sm:text-base">We may update these Terms of Use from time to time. Continued use of the website after changes are made constitutes acceptance of the new terms.</p>
 
                 <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">7. Contact</h2>
-                <p class="text-sm sm:text-base">For any questions, issues, or legal concerns, please <a href="index.html#contact" class="text-red-400 hover:text-red-500 font-semibold transition duration-300">CLICK HERE</a> to contact us</p>
+                <p class="text-sm sm:text-base">For any questions, issues, or legal concerns, please <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="text-red-400 hover:text-red-500 font-semibold transition duration-300">CLICK HERE</a> to contact us</p>
             </div>
         </section>
     </main>
@@ -186,10 +186,10 @@
     <footer class="bg-gray-800 p-6 text-center text-gray-400 mt-auto shadow-inner">
         <div class="flex flex-wrap justify-center space-x-4 sm:space-x-6 mt-4">
             <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="hover:text-white transition duration-300 text-sm sm:text-base">Contact Us</a>
-            <a href="https://about.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">Contact Us</a>
+            <a href="https://about.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">About Us</a>
             <a href="https://privacy-policy.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">Privacy Policy</a>
             <!-- Corrected link for Terms & Conditions to point to itself -->
-            <a href="https://terms-and-conditions.gamebin.html" class="hover:text-white transition duration-300 text-sm sm:text-base">Terms & Conditions</a>
+            <a href="https://terms-and-conditions.gamebin.online" class="hover:text-white transition duration-300 text-sm sm:text-base">Terms & Conditions</a>
         </div>
         <br>
         <p class="text-sm sm:text-base">&copy; 2025 GameBin. All rights reserved.</p>
