--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" type="image/x-icon" href="faviconimg.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-5336954985984577">
     <title>Terms & Conditions - GameBin</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
