--- a/index.html
+++ b/index.html
@@ -171,14 +171,13 @@
                     <li>Third-party content or services</li>
                 </ul>
 
-                <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">5. Links to Other Sites</h2>
-                <p class="text-sm sm:text-base">Game Bin may link to other websites. We are not responsible for the content or practices of any third-party sites.</p>
-
-                <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">6. Changes to These Terms</h2>
+               
+                <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">5. Changes to These Terms</h2>
                 <p class="text-sm sm:text-base">We may update these Terms of Use from time to time. Continued use of the website after changes are made constitutes acceptance of the new terms.</p>
 
-                <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">7. Contact</h2>
-                <p class="text-sm sm:text-base">For any questions, issues, or legal concerns, please <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="text-red-400 hover:text-red-500 font-semibold transition duration-300">CLICK HERE</a> to contact us</p>
+                <h2 class="text-xl sm:text-2xl font-bold text-white mt-8 mb-4">6. Contact</h2>
+                <p class="text-sm sm:text-base">For any questions, issues, or legal concerns, please <a href="https://forms.gle/Fr4nWUpFvcuvnKwC9" class="text-red-400 hover:text-red-500 font-semibold transition duration-300">CLICK HERE</a> to contact us.</p>
+                <p>Or mail us at:  <p style="color:#ff4c4c;">gamebin.online@gmail.com </p></p>
             </div>
         </section>
     </main>
